--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,6 +63,17 @@ ul {
     justify-content: space-evenly;
 }
 
+#scoreSec {
+    display: flex;
+    justify-content: space-between;
+    font-weight: bold;
+    font-size: 25px;
+    margin-bottom: 50px;
+}
+
+#playAgainBtn {
+    display: none;
+}
 
 #roundDisplay {
     margin: 50px;
@@ -70,9 +81,6 @@ ul {
     width: 300px;
     height: 200px;
     border: 2px solid green;
-}
-#scoreSec {
-    margin-bottom: 20px;
 }
 
 #nextRoundLabel {
@@ -83,8 +91,6 @@ ul {
     display: none;
 }
 
-#playAgainBtn {
-    display: none;
-}
+
 
 
